not complete, did not implement parser function but got page to render data after post request

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,13 @@
-
-
+<!DOCTYPE html>
+<html>
+<body>
+  <h1>JSON to CSV</h1>
+  <div>
+    <form method= "POST" action = '/post'>
+      <textarea class = 'input' type = 'text' placeholder = 'JSON' name = 'JSON DATA'></textarea>
+      <button>Submit</button>
+    </form>
+    <div id='csv'></div>
+  </div>
+</body>
+</html>
